--- a/OAuth2DB/src/main/resources/application.properties
+++ b/OAuth2DB/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/oauth2
+spring.datasource.url=jdbc:mysql://localhost:3306/oauth2?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
